# esp-image-manager

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  package.json  rust-analyzer.toml
.github/workflows/: lambda-deploy.yml  rust.yml
.husky/: pre-commit
migrations/2025-12-02-214623-0000_initial/: up.sql
migrations/2025-12-05-212518-0000_add_name/: down.sql  up.sql
migrations/2025-12-08-041753-0000_add_display_field/: down.sql  up.sql
migrations/2025-12-14-035201-0000_add_config_table/: down.sql  up.sql
site/: .gitignore  .lintstagedrc.json  eslint.config.js  index.html  package.json  setupVitest.ts  tailwind.config.js  tsconfig.json  vite.config.ts
site/src/: App.test.tsx  App.tsx  ImagePreview.tsx  index.css  main.tsx  queries.ts  types.d.ts
site/src/components/: AutoUpdateInput.tsx  BorderedTableCell.tsx  DisplayPreview.tsx  DrawingCanvas.tsx  Footer.tsx  Gallery.tsx  Header.tsx  ImageUploadCrop.tsx  LoadingSpinner.tsx  NavItem.tsx  RGBImagePreview.tsx  SubmitModal.tsx
site/src/components/Button/: ButtonTypes.ts  index.tsx
site/src/components/__tests__/: Button.test.tsx
site/src/contexts/: DisplayContext.tsx
site/src/hooks/: queries.ts  useUploads.ts
site/src/page/: PageTemplate.tsx
src/: config.rs  context.rs  db.rs  graphql.rs  lib.rs  main.rs  models.rs  rate.rs  redis_cache.rs  routes.rs  schema.rs  uuid.rs
src/api/: mod.rs
src/svc/: mod.rs  screensaver.rs  upload.rs
wasm-image-preview/: Cargo.toml
wasm-image-preview/pkg/: package.json  wasm_image_preview.d.ts  wasm_image_preview.js  wasm_image_preview_bg.wasm  wasm_image_preview_bg.wasm.d.ts
wasm-image-preview/src/: lib.rs
