[package]
name = "image-manager"
version = "0.1.0"
edition = "2021"
default-run = "image-manager"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true

[dependencies]
anyhow = "1.0.82"
async-stream = "0.3.5"
axum-extra = { version = "0.12", features = [
  "cookie",
  "json-deserializer",
  "query",
] }
axum = { version = "0.8", features = ["ws", "http2", "multipart", "macros"] }
cached = { version = "0.56", features = ["async_tokio_rt_multi_thread"] }
cache_loader_async = { version = "0.2.1", features = ["ttl-cache"] }
chrono = "0.4.24"
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
diesel = { version = "2.1.6", features = [
  "sqlite",
  "r2d2",
  "uuid",
  "chrono",
  "serde_json",
  "numeric",
] }
dotenvy = "0.15.7"
flate2 = "1.0.30"
futures = "0.3"
hashbrown = { version = "0.16", features = ["serde"] }
http-cache-reqwest = "0.16"
juniper_axum = { version = "0.3.0", features = ["subscriptions"] }
juniper_graphql_ws = { version = "0.5", features = ["graphql-transport-ws"] }
juniper = { version = "0.17", features = ["anyhow", "uuid", "chrono-clock"] }
lazy_static = "1.4"
log = "0.4.21"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full", "macros", "rt-multi-thread"] }
tower = "0.5"
tower-etag-cache = { git = "https://github.com/billythedummy/tower-etag-cache", features = [
  "simple-etag-cache-key",
  "const-lru-provider",
  "base64-blake3-body-etag",
] }
tower-http = { version = "0.6", features = [
  "compression-gzip",
  "compression-zstd",
  "compression-deflate",
  "compression-br",
  "full",
] }
tracing-subscriber = "0.3.18"
ttl_cache = "0.5.1"
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["v7", "fast-rng", "serde"] }
http-cache-semantics = "2.1.0"
toml = "0.9"
once_cell = "1.20.2"
http-cache = { version = "0.21", default-features = false }
reqwest = { version = "0.12.15", features = [
  "json",
  "multipart",
  "blocking",
  "deflate",
  "gzip",
  "zstd",
] }
chrono-tz = { version = "0.10.3", features = ["serde"] }
bigdecimal = { version = "0.4.8", features = ["serde", "serde_json"] }
tracing = "0.1.41"
base64 = "0.22.1"
rust-embed = { version = "8.9.0", features = [
  "axum",
  "axum-ex",
  "compression",
  "debug-embed",
  "tokio",
] }
mime_guess = "2.0.5"
image = "0.25.9"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
