[package]
name = "wasm-image-preview"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
image = "0.25.9"
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = [
  "console",
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
] }
