[package]
name = "wasm-image-preview"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
image = "0.25.9"
tokio = { version = "1.48.0", features = ["rt", "sync", "macros", "time", "io-util"] }
tokio_with_wasm = { version = "0.8.7", features = ["full"] }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = [
  "console",
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
] }
web-time = "1.1.0"
